testsuite/tests/codeGen/should_run/T16981.hs
module Main where

import T16981A

main :: IO ()
main = print splitInjectedAsWindowed

