testsuite/tests/codeGen/should_fail/T26964Module.hs
module Main where

import T26964ModuleA (bad)

main :: IO ()
main = bad
